Stuck in bug i sus 17:01 03/01/25

--- a/MES/page/sales/css/salesDashboard.css
+++ b/MES/page/sales/css/salesDashboard.css
@@ -8,7 +8,6 @@ html, body {
     margin: 0;
     padding: 0;
     overflow: hidden !important; /* ล็อคหน้าจอหลักห้ามเลื่อน */
-    font-family: 'Prompt', sans-serif;
 }
 
 .page-container {
